--- a/build.xml
+++ b/build.xml
@@ -174,6 +174,6 @@
   </target>
 
   <target name="run" depends="compile" description="Run a single problem">
-    <java classname="project.euler.problems.Problem_${problem.number}" classpathref="cp" />
+    <java classname="project.euler.problems.Problem_${problem}" classpathref="cp" />
   </target>
 </project>
